added jwt permissions, split of services
