# sso/internal/domain/models/user.go
@@ -4,4 +4,8 @@ type User struct {
 	ID           int64
 	Email        string
 	PasswordHash []byte
+	Name         string
+	Phone        string
+	Address      string
+	Activated    bool
 }
